Clean up
Signed-off-by: Geoffdl <geoffroydelorme@gmail.com>